feat: 카드 교환 - 헤더 수정

--- a/src/styles/trade-status.module.scss
+++ b/src/styles/trade-status.module.scss
@@ -1,8 +1,8 @@
 $color-deleted: #929599;
-$color-request: #28afa4;
-$color-select: #e0a22f;
+$color-request: #e0a22f;
+$color-select: #e02f55;
 $color-process: #267bdc;
-$color-complete: rgb(10, 19, 49);
+$color-complete: #4CAF50;
 
 .text-deleted {
   color: $color-deleted;
